update device status view
update device status view

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -533,7 +533,7 @@
 
 						<ul class="submenu">
 							<li class="">
-								<a href="form-elements.html">
+								<a href="/devices">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Device List
 								</a>
