--- a/src/main/resources/templates/devices.html
+++ b/src/main/resources/templates/devices.html
@@ -791,6 +791,7 @@
 														<td th:text="${device.manufacturer.manufacturerName}"></td>
 
 														<td>
+														<a th:href="@{'/editDevice'(id=${device.id})}" th:text="Edit"></a>
 															<!-- div class="hidden-sm hidden-xs action-buttons">
 																<a class="blue" href="#">
 																	<i class="ace-icon fa fa-search-plus bigger-130"></i>
